<resources>
    <string name="app_name">伯乐在线</string>

    <string name="share_action">分享</string>
    <string name="favorite_action">收藏</string>

    <string name="city">城市</string>
    <string name="current_city">北京</string>
    <string name="current_loc_city">当前定位城市</string>
    <string name="all_cities">全部城市</string>
    <string name="nation">全国</string>
    <!-- Channel List -->
    <string name="design_channel">设计频道</string>
    <string name="web_channel">Web前端</string>
    <string name="python_channel">Python开发</string>
    <string name="java_channel">Java技术</string>
    <string name="android_channel">Android应用</string>
    <string name="ios_channel">IOS应用</string>

    <string name="nonexist_message">当前频道无Feed，请前往官网浏览</string>

    <string name="splash_welcome">Welcome to JobBole</string>
</resources>
